{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 1766,
  "lineage": "87db214c-8e4c-42e5-0c6f-d81bf1674b3a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-001",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ff9e9b51c1f62ca",
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:instance/i-0af4b1db7f2fe163a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af4b1db7f2fe163a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e57bca5e30b95530",
            "private_dns": "ip-10-0-1-241.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.241",
            "public_ip": "18.136.212.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095b3631cf0d51b21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ae54c928696e3a1f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9c8457a06b1ac16",
            "tags": {
              "Name": "default_ec2"
            },
            "tags_all": {
              "Name": "default_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae54c928696e3a1f"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.sg.aws_security_group.allow_tls"
          ]
        },
        {
          "index_key": "ec2-002",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ff9e9b51c1f62ca",
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:instance/i-01b7a7bfffd5cee1f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b7a7bfffd5cee1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d9a9235a349cf933",
            "private_dns": "ip-10-0-6-210.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.210",
            "public_ip": "54.169.51.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0896e26c3fe64c881",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ae54c928696e3a1f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbe4b495281225d7",
            "tags": {
              "Name": "default_ec2"
            },
            "tags_all": {
              "Name": "default_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae54c928696e3a1f"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.sg.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-ealb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:loadbalancer/app/pub-ealb/d6976d9d1dc73b2b",
            "arn_suffix": "app/pub-ealb/d6976d9d1dc73b2b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pub-ealb-1843026550.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:loadbalancer/app/pub-ealb/d6976d9d1dc73b2b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pub-ealb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-035ee39ce5f65d6af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d9c8457a06b1ac16"
              },
              {
                "subnet_id": "subnet-0fbe4b495281225d7"
              }
            ],
            "subnets": [
              "subnet-0d9c8457a06b1ac16",
              "subnet-0fbe4b495281225d7"
            ],
            "tags": {
              "Environment": "default_LB"
            },
            "tags_all": {
              "Environment": "default_LB"
            },
            "vpc_id": "vpc-05c9a91c52e54f31d",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.sg.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-ealb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:loadbalancer/app/pvt-ealb/429a74b3ab6e1b65",
            "arn_suffix": "app/pvt-ealb/429a74b3ab6e1b65",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-pvt-ealb-1443770791.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:loadbalancer/app/pvt-ealb/429a74b3ab6e1b65",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pvt-ealb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-035ee39ce5f65d6af"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02cca6b333e26938e"
              },
              {
                "subnet_id": "subnet-0717a064a9c632808"
              }
            ],
            "subnets": [
              "subnet-02cca6b333e26938e",
              "subnet-0717a064a9c632808"
            ],
            "tags": {
              "Environment": "default_LB"
            },
            "tags_all": {
              "Environment": "default_LB"
            },
            "vpc_id": "vpc-05c9a91c52e54f31d",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.nw.aws_subnet.pri-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.sg.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-ealb-to-web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:listener/app/pub-ealb/d6976d9d1dc73b2b/9defdcf4ec2d1b59",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:targetgroup/ec2-tg1-grp/2f629f62381f4b75",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:listener/app/pub-ealb/d6976d9d1dc73b2b/9defdcf4ec2d1b59",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:loadbalancer/app/pub-ealb/d6976d9d1dc73b2b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.web-ealb",
            "module.lb.aws_lb_target_group.web-tg",
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.sg.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-ealb2-to-web-tg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:listener/app/pvt-ealb/429a74b3ab6e1b65/78af3618792b8377",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:targetgroup/ec2-tg2-grp/f8ce03ffe4c616b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:listener/app/pvt-ealb/429a74b3ab6e1b65/78af3618792b8377",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:loadbalancer/app/pvt-ealb/429a74b3ab6e1b65",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.web-ealb2",
            "module.lb.aws_lb_target_group.web-tg2",
            "module.nw.aws_subnet.pri-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.sg.aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:targetgroup/ec2-tg1-grp/2f629f62381f4b75",
            "arn_suffix": "targetgroup/ec2-tg1-grp/2f629f62381f4b75",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:targetgroup/ec2-tg1-grp/2f629f62381f4b75",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ec2-tg1-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:targetgroup/ec2-tg2-grp/f8ce03ffe4c616b0",
            "arn_suffix": "targetgroup/ec2-tg2-grp/f8ce03ffe4c616b0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:272459341377:targetgroup/ec2-tg2-grp/f8ce03ffe4c616b0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ec2-tg2-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:internet-gateway/igw-0b7a5a9b92fb2e918",
            "id": "igw-0b7a5a9b92fb2e918",
            "owner_id": "272459341377",
            "tags": {
              "Name": "default_vpc_pub_igw",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_vpc_pub_igw",
              "env": "default"
            },
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:route-table/rtb-055f39fee0b318cd6",
            "id": "rtb-055f39fee0b318cd6",
            "owner_id": "272459341377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7a5a9b92fb2e918",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default_vpc_pub_rt",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_vpc_pub_rt",
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:route-table/rtb-0878d71de41ace008",
            "id": "rtb-0878d71de41ace008",
            "owner_id": "272459341377",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default_vpc_pvt_rt",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_vpc_pvt_rt",
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pbsnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pb-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d111328c885ac95",
            "route_table_id": "rtb-055f39fee0b318cd6",
            "subnet_id": "subnet-0d9c8457a06b1ac16"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_route_table.pub_rt",
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6b3ba786586e64a",
            "route_table_id": "rtb-055f39fee0b318cd6",
            "subnet_id": "subnet-0fbe4b495281225d7"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_route_table.pub_rt",
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtsnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pvt-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c347b0f1d128e50",
            "route_table_id": "rtb-0878d71de41ace008",
            "subnet_id": "subnet-0717a064a9c632808"
          },
          "dependencies": [
            "module.nw.aws_route_table.pvt_rt",
            "module.nw.aws_subnet.pri-snet",
            "module.nw.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pvt-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6229b74afa9e23b",
            "route_table_id": "rtb-0878d71de41ace008",
            "subnet_id": "subnet-02cca6b333e26938e"
          },
          "dependencies": [
            "module.nw.aws_route_table.pvt_rt",
            "module.nw.aws_subnet.pri-snet",
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pvt-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:subnet/subnet-0717a064a9c632808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0717a064a9c632808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "snet-pvt-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:subnet/subnet-02cca6b333e26938e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cca6b333e26938e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pb-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:subnet/subnet-0d9c8457a06b1ac16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9c8457a06b1ac16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "snet-pb-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:subnet/subnet-0fbe4b495281225d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbe4b495281225d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:vpc/vpc-05c9a91c52e54f31d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0cd78d2ad6b8627a3",
            "default_route_table_id": "rtb-004c65312d7068353",
            "default_security_group_id": "sg-01dfd1c94d951dc08",
            "dhcp_options_id": "dopt-0fd11f527b9cc5661",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c9a91c52e54f31d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004c65312d7068353",
            "owner_id": "272459341377",
            "tags": {
              "Name": "default_vpc",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_vpc",
              "env": "default"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:security-group/sg-0ae54c928696e3a1f",
            "description": "SG for ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae54c928696e3a1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-http/s",
            "name_prefix": "",
            "owner_id": "272459341377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "lb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:security-group/sg-035ee39ce5f65d6af",
            "description": "SG for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035ee39ce5f65d6af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-http/s",
            "name_prefix": "",
            "owner_id": "272459341377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "module.sg2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:272459341377:security-group/sg-0ed2dc8438871a402",
            "description": "SG for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed2dc8438871a402",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae54c928696e3a1f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lb_http/s",
            "name_prefix": "",
            "owner_id": "272459341377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c9a91c52e54f31d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.sg.aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}